fix: added potential fix with z-index for MUI accordion component

--- a/src/pages/contacts/Contacts.module.scss
+++ b/src/pages/contacts/Contacts.module.scss
@@ -2,7 +2,15 @@
 
 .Contacts {
     &__accordion {
-        background-color: vars.$primary-light !important;
+        position: static !important;
+
         border-bottom: 2px solid vars.$white;
+        background-color: vars.$primary-light !important;
+
+        &_hiddenHeader {
+            h1 {
+                visibility: hidden;
+            }
+        }
     }
 }
